# localcaption

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
docs/diagrams/: architecture.mmd  pipeline.mmd  sequence.mmd
scripts/: install.sh
src/localcaption/: cli.py  errors.py  installer.py  models.py  pipeline.py
tests/: test_cli_doctor.py  test_cli_model.py  test_cli_transcribe.py  test_installer.py  test_models.py  test_models_download.py  test_pipeline.py
